package dk.dtu.CDIOg18.monopolyjr;

public class Token {

    private Player player;
    
    public Token(Player player) {
        this.player = player;
    }

    public Player getPlayer() {
        return player;
    }
}
