package dk.dtu.CDIOg18.monopolyjr.fields;

public enum FieldType {
    PROPERTY,
    CHANCE,
    START,
    JAIL,
    FREE_PARKING,
    GO_TO_JAIL,
    JUST_VISITING
}
